# Quizli

./: .env.sample  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/core/: config.py
app/crud/: answer.py  question.py
app/models/: __init__.py  answer.py  question.py
app/routers/: answer.py  question.py
app/schemas/: answer.py  question.py
app/services/: answer_service.py
app/tests/: test_answer_crud.py  test_question_crud.py
migrations/alembic/: env.py
migrations/alembic/versions/: 2025_11_21_0115-92beb4d3da71_create_quizli_table.py
nginx/: nginx.conf
