[project]
name = "quizli"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.121.2,<0.122.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "databases (>=0.9.0,<0.10.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "dotenv (>=0.9.9,<0.10.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "ruff (>=0.14.5,<0.15.0)",
    "docker (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
black = "^25.11.0"
flake8 = "^7.3.0"
mypy = "^1.18.2"
isort = "^7.0.0"


[tool.poetry.group.test.dependencies]
coverage = "^7.12.0"
pytest = "^9.0.1"

